test/tests/stages/5_local_variables/valid/mixed_precedence_assignment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  int
  identifier(b)
  =
  const int(0)
  ;
  identifier(a)
  =
  const int(3)
  *
  (
  identifier(b)
  =
  identifier(a)
  )
  ;
  return
  identifier(a)
  +
  identifier(b)
  ;
  }
