test/tests/stages/5_local_variables/invalid_semantics/use_then_redefine.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  return
  identifier(a)
  ;
  int
  identifier(a)
  =
  const int(1)
  ;
  return
  identifier(a)
  ;
  }
